feat: first impl of integration testing
Signed-off-by: Stefano Cappa <stefano.cappa.ks89@gmail.com>

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -21,34 +21,44 @@ env:
   IMAGE_NAME: ks89/${{ github.event.repository.name }}
 
 jobs:
-  build:
-    name: Build and publish
+  test:
+    name: Test
     runs-on: ubuntu-latest
-    timeout-minutes: 60
-    permissions:
-      contents: read
-      packages: write
-      # This is used to complete the identity challenge
-      # with sigstore/fulcio when running outside of PRs.
-      id-token: write
+    timeout-minutes: 15
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
+      - name: Install Rust toolchain
+        uses: actions-rs/toolchain@v1
+        with:
+          profile: minimal
+          toolchain: stable
+          components: clippy
+          override: true
+      - name: Install Make
+        run: sudo apt-get install -y make
+      - name: Install and start MongoDB
+        uses: supercharge/mongodb-github-action@1.8.0
+        with:
+          mongodb-version: 6.0
+          mongodb-replica-set: test-rs
+          mongodb-port: 27017
+      - name: Run tests
+        run: |
+          echo "Installing dependencies"
+          make deps-ci
+          echo "Running tests"
+          make test
 
-#      - name: Dump GitHub context
-#        id: github_context_step
-#        run: |
-#          echo '${{ toJSON(github) }}'
-#          echo '${{ github.event.repository.name }}'
+  build:
+    name: Build and publish
+    runs-on: ubuntu-latest
+    timeout-minutes: 25
 
-#      # Install the cosign tool except on PR
-#      # https://github.com/sigstore/cosign-installer
-#      - name: Install cosign
-#      if: github.event_name != 'pull_request'
-#      uses: sigstore/cosign-installer@f3c664df7af409cb4873aa5068053ba9d61a57b6 #v2.6.0
-#      with:
-#        cosign-release: 'v1.11.0'
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
       # Workaround: https://github.com/docker/build-push-action/issues/461
       - name: Set up Docker Buildx
@@ -90,16 +100,3 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
-
-#      # Sign the resulting Docker image digest except on PRs.
-#      # This will only write to the public Rekor transparency log when the Docker
-#      # repository is public to avoid leaking data.  If you would like to publish
-#      # transparency data even for private images, pass --force to cosign below.
-#      # https://github.com/sigstore/cosign
-#      - name: Sign the published Docker image
-#        if: ${{ github.event_name != 'pull_request' }}
-#        env:
-#          COSIGN_EXPERIMENTAL: "true"
-#        # This step uses the identity token to provision an ephemeral certificate
-#        # against the sigstore community Fulcio instance.
-#        run: echo "${{ steps.meta.outputs.tags }}" | xargs -I {} cosign sign {}@${{ steps.build-and-push.outputs.digest }}
