--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,11 +19,14 @@ panic = "abort"
 
 [dependencies]
 rocket = { version = "0.5.0-rc.2", features = ["uuid", "secrets", "json"] }
-serde = "1.0.144"
-uuid = { version = "1.1.2", features = ["v4", "fast-rng", "macro-diagnostics"] }
+serde = "1.0.152"
 log = "0.4.17"
-log4rs = { version = "1.1.1", features = ["console_appender", "rolling_file_appender"] }
-mongodb = "2.1.0"
-dotenvy = "0.15.5"
+log4rs = { version = "1.2.0", features = ["console_appender", "rolling_file_appender"] }
+mongodb = "2.3.1"
+dotenvy = "0.15.6"
 futures = "0.3"
-serde_json = "1.0.85"
+serde_json = "1.0.91"
+
+[dev-dependencies]
+uuid = { version = "1.2.2", features = ["v4", "fast-rng", "macro-diagnostics"] }
+rand = "0.8.5"
