--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -33,7 +33,8 @@ jobs:
         with:
           profile: minimal
           toolchain: stable
-          components: clippy
+          # target: x86_64-unknown-linux-musl
+          components: clippy, llvm-tools-preview
           override: true
       - name: Install Make
         run: sudo apt-get install -y make
