fix: trigger ci on both master, develop and ft
Signed-off-by: Stefano Cappa <stefano.cappa.ks89@gmail.com>

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -5,10 +5,16 @@ on:
     paths-ignore:
       - '**.md'
       - '**.MD'
+    branches:
+      - "master"
+      - "develop"
+      - "ft**"
     # Publish semver tags as releases.
     tags: [ 'v*.*.*' ]
   pull_request:
-
+    branches:
+      - "master"
+      - "develop"
   # To run the workflow manually from the Actions tab
   workflow_dispatch:
 
