feat-refactor: improve tests and return a custom DbError instead of the one exposed by mongodriver
Signed-off-by: Stefano Cappa <stefano.cappa.ks89@gmail.com>

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -55,7 +55,7 @@ jobs:
           echo "Installing dependencies"
           make deps-ci
           echo "Running tests"
-          make test
+          make test-coverage
 
   build:
     name: Build and publish
