refactor: refactor based on the improvements of  project
Signed-off-by: Stefano Cappa <stefano.cappa.ks89@gmail.com>

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -52,6 +52,7 @@ jobs:
           mongodb-port: 27017
       - name: Run tests
         run: |
+          cp .env_template .env
           echo "Installing dependencies"
           make deps-ci
           echo "Running tests"
