--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "ks89-register"
 version = "1.0.0"
 edition = "2021"
+resolver = "2"
 
 [[bin]]
 name = "register"
@@ -19,14 +20,25 @@ panic = "abort"
 
 [dependencies]
 rocket = { version = "0.5.0-rc.2", features = ["uuid", "secrets", "json"] }
-serde = "1.0.152"
-log = "0.4.17"
-log4rs = { version = "1.2.0", features = ["console_appender", "rolling_file_appender"] }
-mongodb = "2.3.1"
-dotenvy = "0.15.6"
-futures = "0.3"
-serde_json = "1.0.91"
+mongodb = "^2.3.1"
+log = "^0.4.17"
+log4rs = { version = "^1.2.0", features = ["console_appender", "rolling_file_appender"] }
+dotenvy = "^0.15.5"
+envy = "^0.4"
+futures = "^0.3.25"
+
+# To use Serialize and Deserialize traits, you must include Serde.
+# The "derive" feature is only required when
+# using #[derive(Serialize, Deserialize)] to make Serde work with structs
+# and enums defined in your crate.
+serde = { version = "^1.0", features = ["derive"] }
+serde_json = "^1.0"
 
 [dev-dependencies]
 uuid = { version = "1.2.2", features = ["v4", "fast-rng", "macro-diagnostics"] }
 rand = "0.8.5"
+# better looking rust assertions
+pretty_assertions = "^1.3.0"
+# include also serde_json with the feature 'preserve_order' to don't change the order of keys
+# 'preserve_order' is required to compare results in a predictible way in testing
+serde_json = {version = "^1.0", features = ["preserve_order"]}
