--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,13 +19,13 @@ opt-level = 3
 panic = "abort"
 
 [dependencies]
-rocket = { version = "0.5.0-rc.2", features = ["uuid", "secrets", "json"] }
-mongodb = "^2.3.1"
-log = "^0.4.17"
+rocket = { version = "0.5.0", features = ["uuid", "secrets", "json"] }
+mongodb = "^2.7.1"
+log = "^0.4.20"
 log4rs = { version = "^1.2.0", features = ["console_appender", "rolling_file_appender"] }
-dotenvy = "^0.15.5"
+dotenvy = "^0.15.7"
 envy = "^0.4"
-futures = "^0.3.25"
+futures = "^0.3.29"
 
 # To use Serialize and Deserialize traits, you must include Serde.
 # The "derive" feature is only required when
@@ -35,10 +35,10 @@ serde = { version = "^1.0", features = ["derive"] }
 serde_json = "^1.0"
 
 [dev-dependencies]
-uuid = { version = "1.2.2", features = ["v4", "fast-rng", "macro-diagnostics"] }
+uuid = { version = "1.6.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
 rand = "0.8.5"
 # better looking rust assertions
-pretty_assertions = "^1.3.0"
+pretty_assertions = "^1.4.0"
 # include also serde_json with the feature 'preserve_order' to don't change the order of keys
 # 'preserve_order' is required to compare results in a predictible way in testing
 serde_json = {version = "^1.0", features = ["preserve_order"]}
