--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,8 +21,9 @@ panic = "abort"
 [dependencies]
 rocket = { version = "0.5.1", features = ["uuid", "secrets", "json"] }
 mongodb = "^3.2.3"
-log = "^0.4.27"
-log4rs = { version = "^1.3.0", features = ["console_appender", "rolling_file_appender"] }
+tracing = "^0.1.41"
+tracing-appender = "^0.2.3"
+tracing-subscriber = { version = "^0.3.19", features = ["env-filter"] }
 dotenvy = "^0.15.7"
 envy = "^0.4.2"
 futures = "^0.3.31"
