fix: add test-log package to show logs also while running tests
Signed-off-by: Stefano Cappa <stefano.cappa.ks89@gmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,3 +43,4 @@ pretty_assertions = "^1.4.1"
 # include also serde_json with the feature 'preserve_order' to don't change the order of keys
 # 'preserve_order' is required to compare results in a predictible way in testing
 serde_json = { version = "^1.0.143", features = ["preserve_order"] }
+test-log = {version = "0.2.18", features = ["trace"]}
